# ncifinance

./: Cargo.toml  flake.nix  rust-toolchain.toml
data/: candles_1h.json
src/: Heck.rs  custom_strategy.rs  main.rs  readShit.rs  rule_tree.rs  strategy_tree.rs
