[package]
authors = ["Sridhar Ratnakumar <srid@srid.ca>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix
name = "ncifinance"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
barter = "0.8.12"
barter-data = "0.6.9"
barter-integration = "0.3.5"
binance = "0.20.0"
chrono = { version =  "0.4.22" , features = ["std"] }
tokio = "1.21.2"
parking_lot = "0.12.1"
serde_json = "1.0.87"
serde  = "1.0.147"
uuid = { version = "0.8.2" , features = ["v4" ] }
csv = "1.1.6"
ta = "0.5.0"